--- a/themes/clotheme/layouts/partials/head.html
+++ b/themes/clotheme/layouts/partials/head.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- This site is optimized with the Yoast SEO plugin v12.9.1 - https://yoast.com/wordpress/plugins/seo/ -->
     <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
-    <link rel="canonical" href="https://cloto.ca/" />
+    <link rel="canonical" href="/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Home - Cloto" />
@@ -369,7 +369,7 @@
     <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://cloto.ca/xmlrpc.php?rsd" />
     <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://cloto.ca/wp-includes/wlwmanifest.xml" />
     <meta name="generator" content="WordPress 5.3.2" />
-    <link rel='shortlink' href='https://cloto.ca/' />
+    <link rel='shortlink' href='/' />
     <link rel="alternate" type="application/json+oembed"
         href="https://cloto.ca/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fcloto.ca%2F" />
     <link rel="alternate" type="text/xml+oembed"
