--- a/themes/clotheme/layouts/partials/head.html
+++ b/themes/clotheme/layouts/partials/head.html
@@ -12,14 +12,14 @@
     <meta property="og:title" content="Home - Cloto" />
     <meta property="og:description"
         content="Life Unhampered You&#8217;ve Got Better Things To Do Than Watch the Video Get Started How It Works Download the App Create an account with your email address, phone number, and location. Then select a laundry plan that works for you. Schedule a Pickup Fill the Clo-Totes or Clo-Bags with dirty laundry or dry cleaning and &hellip;" />
-    <meta property="og:url" content="https://cloto.ca/" />
+    <meta property="og:url" content="/" />
     <meta property="og:site_name" content="Cloto" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description"
         content="Life Unhampered You&#8217;ve Got Better Things To Do Than Watch the Video Get Started How It Works Download the App Create an account with your email address, phone number, and location. Then select a laundry plan that works for you. Schedule a Pickup Fill the Clo-Totes or Clo-Bags with dirty laundry or dry cleaning and [&hellip;]" />
     <meta name="twitter:title" content="Home - Cloto" />
     <meta name="twitter:site" content="@clotocanada" />
-    <meta name="twitter:image" content="https://cloto.ca/wp-content/uploads/2019/02/Download.png" />
+    <meta name="twitter:image" content="{{"/img/Download.png" | relURL }}" />
     <meta name="twitter:creator" content="@clotocanada" />
     <meta name="google-site-verification" content="QvsIXhQGPCQwREBkY_IA2lWCVbSnvsXn_3cQCYRvzL0" />
     <script type='application/ld+json' class='yoast-schema-graph yoast-schema-graph--main'>
@@ -365,311 +365,22 @@
     </script>
     <script type='text/javascript'
         src='{{"/js/svgs-inline-min.js?ver=1.0.0" | relURL }}'></script>
-    <link rel='https://api.w.org/' href='https://cloto.ca/wp-json/' />
+    <link rel='https://api.w.org/' href='{{"/json/download.json" | relURL}}' />
     <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://cloto.ca/xmlrpc.php?rsd" />
     <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://cloto.ca/wp-includes/wlwmanifest.xml" />
     <meta name="generator" content="WordPress 5.3.2" />
     <link rel='shortlink' href='/' />
     <link rel="alternate" type="application/json+oembed"
-        href="https://cloto.ca/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fcloto.ca%2F" />
+        href="{{"/json/embed.json" | relURL }}" />
     <link rel="alternate" type="text/xml+oembed"
-        href="https://cloto.ca/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fcloto.ca%2F&#038;format=xml" />
+        href="{{"/json/embed1.json" | relURL }}" />
     <link rel="icon" href="{{"/img/cloto-favicon-150x150.png" | relURL }}" sizes="32x32" />
     <link rel="icon" href="{{"/img/cloto-favicon-300x300.png" | relURL }}" sizes="192x192" />
     <link rel="apple-touch-icon-precomposed"
         href="{{"/img/cloto-favicon-300x300.png" | relURL }}" />
     <meta name="msapplication-TileImage"
         content="{{"/img/cloto-favicon-300x300.png" | relURL }}" />
-    <style type="text/css" id="wp-custom-css">
-        .elementor a {
-            text-decoration: underline
-        }
-
-        html,
-        body {
-            font-family: Roboto, sans-serif;
-            font-weight: 200
-        }
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            color: inherit
-        }
-
-        .elementor-button {
-            font-weight: normal
-        }
-
-        input[type=submit] {
-            text-transform: none;
-            letter-spacing: 0
-        }
-
-        .elementor-price-table__additional_info img {
-            margin-bottom: 1em
-        }
-
-        /*.elementor-nav-menu--toggle .elementor-menu-toggle:not(.elementor-active) + .elementor-nav-menu__container{display:none}.elementor-nav-menu--toggle .elementor-menu-toggle.elementor-active + .elementor-nav-menu__container{display:block}*/
-        .elementor-menu-toggle {
-            margin-top: .25em
-        }
-
-        .pp-contact-form input[type="text"],
-        .pp-contact-form input[type="email"],
-        .pp-contact-form input[type="url"],
-        .pp-contact-form input[type="tel"],
-        .pp-contact-form input[type="date"],
-        .pp-contact-form input[type="number"],
-        .pp-contact-form textarea {
-            min-height: 1em
-        }
-
-        .field_sublabel_below .ginput_complex label {
-            font-size: .875em !important
-        }
-
-        .pp-contact-form input[type="email"] {
-            width: 100%
-        }
-    </style>
-    <!-- OceanWP CSS -->
-    <style type="text/css">
-        /* General CSS */
-        a:hover,
-        a.light:hover,
-        .theme-heading .text::before,
-        #top-bar-content>a:hover,
-        #top-bar-social li.oceanwp-email a:hover,
-        #site-navigation-wrap .dropdown-menu>li>a:hover,
-        #site-header.medium-header #medium-searchform button:hover,
-        .oceanwp-mobile-menu-icon a:hover,
-        .blog-entry.post .blog-entry-header .entry-title a:hover,
-        .blog-entry.post .blog-entry-readmore a:hover,
-        .blog-entry.thumbnail-entry .blog-entry-category a,
-        ul.meta li a:hover,
-        .dropcap,
-        .single nav.post-navigation .nav-links .title,
-        body .related-post-title a:hover,
-        body #wp-calendar caption,
-        body .contact-info-widget.default i,
-        body .contact-info-widget.big-icons i,
-        body .custom-links-widget .oceanwp-custom-links li a:hover,
-        body .custom-links-widget .oceanwp-custom-links li a:hover:before,
-        body .posts-thumbnails-widget li a:hover,
-        body .social-widget li.oceanwp-email a:hover,
-        .comment-author .comment-meta .comment-reply-link,
-        #respond #cancel-comment-reply-link:hover,
-        #footer-widgets .footer-box a:hover,
-        #footer-bottom a:hover,
-        #footer-bottom #footer-bottom-menu a:hover,
-        .sidr a:hover,
-        .sidr-class-dropdown-toggle:hover,
-        .sidr-class-menu-item-has-children.active>a,
-        .sidr-class-menu-item-has-children.active>a>.sidr-class-dropdown-toggle,
-        input[type=checkbox]:checked:before {
-            color: #1e4b6d
-        }
-
-        input[type="button"],
-        input[type="reset"],
-        input[type="submit"],
-        button[type="submit"],
-        .button,
-        #site-navigation-wrap .dropdown-menu>li.btn>a>span,
-        .thumbnail:hover i,
-        .post-quote-content,
-        .omw-modal .omw-close-modal,
-        body .contact-info-widget.big-icons li:hover i,
-        body div.wpforms-container-full .wpforms-form input[type=submit],
-        body div.wpforms-container-full .wpforms-form button[type=submit],
-        body div.wpforms-container-full .wpforms-form .wpforms-page-button {
-            background-color: #1e4b6d
-        }
-
-        .widget-title {
-            border-color: #1e4b6d
-        }
-
-        blockquote {
-            border-color: #1e4b6d
-        }
-
-        #searchform-dropdown {
-            border-color: #1e4b6d
-        }
-
-        .dropdown-menu .sub-menu {
-            border-color: #1e4b6d
-        }
-
-        .blog-entry.large-entry .blog-entry-readmore a:hover {
-            border-color: #1e4b6d
-        }
-
-        .oceanwp-newsletter-form-wrap input[type="email"]:focus {
-            border-color: #1e4b6d
-        }
-
-        .social-widget li.oceanwp-email a:hover {
-            border-color: #1e4b6d
-        }
-
-        #respond #cancel-comment-reply-link:hover {
-            border-color: #1e4b6d
-        }
-
-        body .contact-info-widget.big-icons li:hover i {
-            border-color: #1e4b6d
-        }
-
-        #footer-widgets .oceanwp-newsletter-form-wrap input[type="email"]:focus {
-            border-color: #1e4b6d
-        }
-
-        input[type="button"]:hover,
-        input[type="reset"]:hover,
-        input[type="submit"]:hover,
-        button[type="submit"]:hover,
-        input[type="button"]:focus,
-        input[type="reset"]:focus,
-        input[type="submit"]:focus,
-        button[type="submit"]:focus,
-        .button:hover,
-        #site-navigation-wrap .dropdown-menu>li.btn>a:hover>span,
-        .post-quote-author,
-        .omw-modal .omw-close-modal:hover,
-        body div.wpforms-container-full .wpforms-form input[type=submit]:hover,
-        body div.wpforms-container-full .wpforms-form button[type=submit]:hover,
-        body div.wpforms-container-full .wpforms-form .wpforms-page-button:hover {
-            background-color: #2665b7
-        }
-
-        a {
-            color: #2178b9
-        }
-
-        .container {
-            width: 1600px
-        }
-
-        @media only screen and (min-width:960px) {
-
-            .content-area,
-            .content-left-sidebar .content-area {
-                width: 75%
-            }
-        }
-
-        @media only screen and (min-width:960px) {
-
-            .widget-area,
-            .content-left-sidebar .widget-area {
-                width: 25%
-            }
-        }
-
-        body .theme-button,
-        body input[type="submit"],
-        body button[type="submit"],
-        body button,
-        body .button,
-        body div.wpforms-container-full .wpforms-form input[type=submit],
-        body div.wpforms-container-full .wpforms-form button[type=submit],
-        body div.wpforms-container-full .wpforms-form .wpforms-page-button {
-            background-color: #1e4b6d
-        }
-
-        body .theme-button:hover,
-        body input[type="submit"]:hover,
-        body button[type="submit"]:hover,
-        body button:hover,
-        body .button:hover,
-        body div.wpforms-container-full .wpforms-form input[type=submit]:hover,
-        body div.wpforms-container-full .wpforms-form input[type=submit]:active,
-        body div.wpforms-container-full .wpforms-form button[type=submit]:hover,
-        body div.wpforms-container-full .wpforms-form button[type=submit]:active,
-        body div.wpforms-container-full .wpforms-form .wpforms-page-button:hover,
-        body div.wpforms-container-full .wpforms-form .wpforms-page-button:active {
-            background-color: #2665b7
-        }
-
-        /* Header CSS */
-        #site-header.has-header-media .overlay-header-media {
-            background-color: rgba(0, 0, 0, 0.5)
-        }
-
-        /* Typography CSS */
-        body {
-            font-family: Roboto;
-            font-weight: 300;
-            font-size: 18px;
-            color: #0a0a0a
-        }
-
-        h1 {
-            font-weight: 700;
-            font-size: 4em
-        }
-
-        @media (max-width:768px) {
-            h1 {
-                font-size: 2.5em
-            }
-        }
-
-        @media (max-width:480px) {
-            h1 {
-                font-size: 2em
-            }
-        }
-
-        h2 {
-            font-weight: 500;
-            font-size: 2.25em
-        }
-
-        @media (max-width:768px) {
-            h2 {
-                font-size: 1.75em
-            }
-        }
-
-        @media (max-width:480px) {
-            h2 {
-                font-size: 1.5em
-            }
-        }
-
-        h3 {
-            font-weight: 500;
-            font-size: 1.5em
-        }
-
-        @media (max-width:768px) {
-            h3 {
-                font-size: 1.25em
-            }
-        }
-
-        @media (max-width:480px) {
-            h3 {
-                font-size: 1em
-            }
-        }
-
-        h4 {
-            font-weight: 500;
-            font-size: 1em
-        }
-
-        @media (max-width:768px) {
-            h4 {
-                font-size: 1em
-            }
-        }
-    </style>
+    <link rel='stylesheet' id='csshero-main-stylesheet-css'
+        href='{{"/css/css5.css" | relURL }}' type='text/css'
+        media='all' />
 </head>
